LAGrammarParser.py
# Generated from LAGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAGrammarParser ( Parser ):

    grammarFileName = "LAGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "','", "'fim_declare'", "';'", "'leia'", "'('", "')'", 
                     "'escreva'", "'\"'", "'<-'", "'se'", "'entao'", "'senao'", 
                     "'fim_se'", "'enquanto'", "'faca'", "'fim_enquanto'", 
                     "'para'", "'ate'", "'passo'", "'fim_para'", "'retorne'", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", 
                     "'='", "'verdadeiro'", "'falso'", "'literal'", "'inteiro'", 
                     "'real'", "'logico'", "'^'", "'registro'", "'endereco'", 
                     "'fim_registro'", "'tipo'", "'.'", "'constante'", "'['", 
                     "']'", "'e'", "'ou'", "'e nao'", "'&'", "'var'", "'procedimento'", 
                     "'fim_procedimento'", "'funcao'", "'fim_funcao'", "'{'", 
                     "'}'", "':'", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DOISPONTOS", "DIFERENTE", "IDENT", "CADEIA", "LOGICO", 
                      "NUM_INT", "NUM_REAL", "WS", "COMMENTS", "ErrorChar" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_declaracao_global = 4
    RULE_declaracoes_variaveis = 5
    RULE_declaracao_variavel = 6
    RULE_identificadores = 7
    RULE_corpo = 8
    RULE_comandos = 9
    RULE_comando = 10
    RULE_leia_cmd = 11
    RULE_escreva_cdm = 12
    RULE_mensagem_literal = 13
    RULE_atribuicao_cmd = 14
    RULE_chamada_funcao_cmd = 15
    RULE_chamada_tipo_cdm = 16
    RULE_chamada_procedimento_cmd = 17
    RULE_argumentos = 18
    RULE_cmd_condicional = 19
    RULE_cmd_enquanto = 20
    RULE_cmd_para = 21
    RULE_retorno = 22
    RULE_expressao = 23
    RULE_relacional = 24
    RULE_termo = 25
    RULE_literal = 26
    RULE_tipo = 27
    RULE_operacao = 28
    RULE_fator = 29
    RULE_registro = 30
    RULE_campos_registro = 31
    RULE_campo_registro = 32
    RULE_declaracao_tipo = 33
    RULE_declaracoes_tipos = 34
    RULE_declaracao_tipo_lista = 35
    RULE_identificador = 36
    RULE_constante = 37
    RULE_dimensao = 38
    RULE_ponteiro = 39
    RULE_logico = 40
    RULE_endereco = 41
    RULE_operador = 42
    RULE_parametros = 43
    RULE_parametro = 44
    RULE_procedimento = 45
    RULE_funcao = 46
    RULE_bloco = 47

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "declaracao_global", "declaracoes_variaveis", "declaracao_variavel", 
                   "identificadores", "corpo", "comandos", "comando", "leia_cmd", 
                   "escreva_cdm", "mensagem_literal", "atribuicao_cmd", 
                   "chamada_funcao_cmd", "chamada_tipo_cdm", "chamada_procedimento_cmd", 
                   "argumentos", "cmd_condicional", "cmd_enquanto", "cmd_para", 
                   "retorno", "expressao", "relacional", "termo", "literal", 
                   "tipo", "operacao", "fator", "registro", "campos_registro", 
                   "campo_registro", "declaracao_tipo", "declaracoes_tipos", 
                   "declaracao_tipo_lista", "identificador", "constante", 
                   "dimensao", "ponteiro", "logico", "endereco", "operador", 
                   "parametros", "parametro", "procedimento", "funcao", 
                   "bloco" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    DOISPONTOS=60
    DIFERENTE=61
    IDENT=62
    CADEIA=63
    LOGICO=64
    NUM_INT=65
    NUM_REAL=66
    WS=67
    COMMENTS=68
    ErrorChar=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAGrammarParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAGrammarParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAGrammarParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.declaracoes()
            self.state = 97
            self.match(LAGrammarParser.T__0)
            self.state = 98
            self.corpo()
            self.state = 99
            self.match(LAGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAGrammarParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 90159953477632008) != 0):
                self.state = 101
                self.decl_local_global()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_global(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_globalContext,0)


        def declaracao_local(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,0)


        def constante(self):
            return self.getTypedRuleContext(LAGrammarParser.ConstanteContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAGrammarParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.declaracao_global()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.declaracao_local()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.constante()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAGrammarParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(LAGrammarParser.T__2)
            self.state = 113
            self.declaracao_variavel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes_variaveis(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracoes_variaveisContext,0)


        def procedimento(self):
            return self.getTypedRuleContext(LAGrammarParser.ProcedimentoContext,0)


        def funcao(self):
            return self.getTypedRuleContext(LAGrammarParser.FuncaoContext,0)


        def declaracao_tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = LAGrammarParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_global)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.declaracoes_variaveis()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.procedimento()
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.funcao()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.declaracao_tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracoes_variaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_variavelContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes_variaveis" ):
                listener.enterDeclaracoes_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes_variaveis" ):
                listener.exitDeclaracoes_variaveis(self)




    def declaracoes_variaveis(self):

        localctx = LAGrammarParser.Declaracoes_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracoes_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LAGrammarParser.T__2)
            self.state = 122
            self.declaracao_variavel()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 123
                self.match(LAGrammarParser.T__3)
                self.state = 124
                self.declaracao_variavel()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==6:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificadores(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadoresContext,0)


        def DOISPONTOS(self):
            return self.getToken(LAGrammarParser.DOISPONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.TipoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)




    def declaracao_variavel(self):

        localctx = LAGrammarParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_variavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.identificadores()
            self.state = 134
            self.match(LAGrammarParser.DOISPONTOS)
            self.state = 135
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_identificadores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificadores" ):
                listener.enterIdentificadores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificadores" ):
                listener.exitIdentificadores(self)




    def identificadores(self):

        localctx = LAGrammarParser.IdentificadoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identificadores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.identificador()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 138
                self.match(LAGrammarParser.T__3)
                self.state = 139
                self.identificador()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,i)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandosContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandosContext,i)


        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.FuncaoContext,i)


        def procedimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ProcedimentoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ProcedimentoContext,i)


        def registro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.RegistroContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.RegistroContext,i)


        def declaracao_tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_tipoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_tipoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_corpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo" ):
                listener.enterCorpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo" ):
                listener.exitCorpo(self)




    def corpo(self):

        localctx = LAGrammarParser.CorpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_corpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4701778901713691784) != 0):
                self.state = 151
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 145
                    self.declaracao_local()
                    pass
                elif token in [7, 10, 13, 17, 20, 24, 40, 62]:
                    self.state = 146
                    self.comandos()
                    pass
                elif token in [56]:
                    self.state = 147
                    self.funcao()
                    pass
                elif token in [54]:
                    self.state = 148
                    self.procedimento()
                    pass
                elif token in [41]:
                    self.state = 149
                    self.registro()
                    pass
                elif token in [44]:
                    self.state = 150
                    self.declaracao_tipo()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = LAGrammarParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comandos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.comando()
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 157
                    self.comando() 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def escreva_cdm(self):
            return self.getTypedRuleContext(LAGrammarParser.Escreva_cdmContext,0)


        def leia_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Leia_cmdContext,0)


        def cmd_para(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_paraContext,0)


        def atribuicao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Atribuicao_cmdContext,0)


        def chamada_tipo_cdm(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_tipo_cdmContext,0)


        def chamada_procedimento_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_procedimento_cmdContext,0)


        def chamada_funcao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_funcao_cmdContext,0)


        def cmd_condicional(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_condicionalContext,0)


        def cmd_enquanto(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_enquantoContext,0)


        def retorno(self):
            return self.getTypedRuleContext(LAGrammarParser.RetornoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = LAGrammarParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.escreva_cdm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.leia_cmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.cmd_para()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.atribuicao_cmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.chamada_tipo_cdm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 168
                self.chamada_procedimento_cmd()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 169
                self.chamada_funcao_cmd()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 170
                self.cmd_condicional()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 171
                self.cmd_enquanto()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 172
                self.retorno()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Leia_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificadores(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadoresContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_leia_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeia_cmd" ):
                listener.enterLeia_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeia_cmd" ):
                listener.exitLeia_cmd(self)




    def leia_cmd(self):

        localctx = LAGrammarParser.Leia_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_leia_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(LAGrammarParser.T__6)
            self.state = 176
            self.match(LAGrammarParser.T__7)
            self.state = 177
            self.identificadores()
            self.state = 178
            self.match(LAGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

